Fix cast_channel::KeepAliveDelegate DCHECK failure.

Fixes a DCHECK crash caused by KeepAliveDelegate receiving messages
after an error occurs. In this case, the DCHECK's assumption seems to
have been wrong; and so some extra implementation was added to account
for the started versus not-started state.

BUG=677367
R=wez@chromium.org

Review-Url: https://codereview.chromium.org/2609503002
Cr-Commit-Position: refs/heads/master@{#443809}

Former-commit-id: b4dbf044c53ead8422a063e7c27ae9999cbecb4d